<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_view"
        android:title="@string/menu_title_view_details"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_edit"
        android:title="@string/menu_title_update"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/menu_title_delete"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_view_pod"
        android:title="@string/menu_title_view_pod"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_pod"
        android:title="@string/item_menu_title_add_pod"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_drs_close"
        android:title="Close DRS"
        app:showAsAction="never"
        android:visible="false"/>
    <item
        android:id="@+id/action_view_signature"
        android:title="View Signature"
        app:showAsAction="never"
        android:visible="false"/>

</menu>