<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:paddingBottom="@dimen/size_10dp">

        <RelativeLayout
            android:id="@+id/rv_header_container"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_55dp"
            android:background="@color/colorAccent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_header_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginEnd="@dimen/size_45dp"
                android:paddingTop="@dimen/size_8dp"
                android:paddingBottom="@dimen/size_8dp"
                android:text="@string/secure_delivery"
                android:textAppearance="@style/TextStyleSemiBold"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_18sp" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_close"
                android:layout_width="@dimen/size_45dp"
                android:layout_height="@dimen/size_45dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/image_description"
                android:padding="@dimen/size_10dp"
                android:src="@drawable/ic_close"
                android:tint="@color/colorWhite" />

        </RelativeLayout>

        <TextView
            android:id="@+id/docket_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rv_header_container"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/size_10dp"
            android:fontFamily="@font/quicksand_medium"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_16sp"
            tools:text="Docket No:-000000003" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tnl_otp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/docket_number"
            android:layout_marginStart="@dimen/size_8dp"
            android:layout_marginTop="@dimen/size_15dp"
            android:layout_marginEnd="@dimen/size_8dp"
            android:textColorHint="@color/colorTextHint">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorDivider"
                android:hint="Enter OTP"
                android:imeOptions="actionNext"
                android:inputType="textCapCharacters"
                android:maxLines="1"
                android:nextFocusDown="@id/tnl_length"
                android:textAppearance="@style/TextStyleNormal"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/text_12sp"
                tools:text="123456" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tnl_otp"
            android:layout_marginStart="@dimen/size_10dp"
            android:layout_marginTop="@dimen/size_30dp"
            android:layout_marginEnd="@dimen/size_10dp"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_generate_otp"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/generate_otp"
                android:textAllCaps="false"
                android:textAppearance="@style/TextStyleSemiBold"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_12sp"
                app:cornerRadius="@dimen/size_4dp"
                app:rippleColor="@color/colorAccent"
                tools:targetApi="lollipop" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_verify_otp"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_10dp"
                android:layout_weight="1"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/verify_otp"
                android:textAllCaps="false"
                android:textAppearance="@style/TextStyleSemiBold"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/text_12sp"
                app:cornerRadius="@dimen/size_4dp"
                app:rippleColor="@color/colorAccent"
                tools:targetApi="lollipop" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </RelativeLayout>
</layout>

